# dearmadisonblue

./: .gitignore  README.md  _script_2025_01_25.py  dovetale.ts  fruitfly.py  netcode.ts  script.ts  script_test.ts  server.ts  transformer.py  worker.ts
dovetale/: script.ts  script_test.ts  server.ts
netcode/: test.ts  worker.ts
script/: README.md  pyproject.toml
script/src/script/: __init__.py  interpreter.py
script/test/: test_interpreter.py
