[project]
name = "script"
version = "0.1.0"
description = "Next-generation code interpreter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["test"]
